# tsrust

./: .gitignore  Cargo.toml  build.js  index.html  index.js  package.json  readme.md  tsconfig.json
.github/workflows/: deploy.yml
src/: index.html  index.ts  lib.rs
src/rust/: common.rs  gui.rs  jsapi.rs  lib.rs  main.rs
src/web/: index.ts
