[package]
name = "tsrust"
version = "0.1.0"
edition = "2021"

[package.metadata]
path = "src/rust/main.rs"

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = { version = "0.3", optional = true }
ts-rs = "10.0"
egui = "0.31.1"
eframe = { version = "0.31.1", features = ["glow", "web_screen_reader"] }
chrono = { version = "0.4.23", features = ["wasmbind"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3", features = [
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window'
], optional = true }

[[bin]]
name = "tsrust_bin"
path = "src/rust/main.rs"

[lib]
name = "tsrust_lib"
crate-type = ["cdylib"]
path = "src/rust/lib.rs"

[features]
default = []
web = ["wasm-bindgen", "console_error_panic_hook", "js-sys", "web-sys", "wasm-bindgen-futures"]